applications/step-ca-db/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: step-ca
  labels:
    step-ca.io/test-access: "true"
